third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/self_type_and_receiver.stderr
error: function with Self type must not have a `self` argument
 --> tests/ui/self_type_and_receiver.rs:6:18
  |
6 |         #[Self = "T"]
  |                  ^^^
