third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/self_type_and_receiver.rs
#[cxx::bridge]
mod ffi {
    unsafe extern "C++" {
        type T;

        #[Self = "T"]
        fn method(self: &T);
    }
}

fn main() {}
